--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-jss": "^10.0.0",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   }
 }
