--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-root-plugin": "^0.10.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.1.1",
