--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   }
 }
